--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,8 @@ android {
     }
 }
 
+
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -27,4 +29,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+//    implementation("com.mikepenz:materialdrawer:6.0.2@aar") {
+//        transitive = true
+//    }
+//
+//    //required support lib modules
+//    implementation "com.android.support:appcompat-v7:${versions.supportLib}"
+//    implementation "com.android.support:recyclerview-v7:${versions.supportLib}"
+//    implementation "com.android.support:support-annotations:${versions.supportLib}"
+//    implementation "com.android.support:design:${versions.supportLib}"
+
 }
